--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   firebase_auth: ^0.16.0
   google_sign_in: ^4.4.1
   cloud_firestore: ^0.13.4+2
+  url_launcher:
+  intl:
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -54,6 +56,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/icons/
+    - assets/images/
     - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
